# aiidalab-hello-world

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  __init__.py  example-import-error.ipynb  metadata.json  requirements.txt  setup.cfg  start.py  tests.ipynb
tests/: test_app.py
