[metadata]
name = aiidalab-hello-world
version = 1.0.0
author = The AiiDAlab team
author_email = aiidalab@materialscloud.org
description = Demo app for AiiDAlab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-hello-world
project_urls =
    Bug Tracker = https://github.com/aiidalab/aiidalab-hello-world/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiidalab-widgets-base @ https://github.com/aiidalab/aiidalab-widgets-base/archive/refs/tags/v1.0.0b16.tar.gz

[flake8]
# Adapted from: https://github.com/CasperWA/voila-optimade-client
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.
