[aiidalab]
title = AiiDAlab Hello World App

[metadata]
name = aiidalab-hello-world
version = 1.0.0
author = The AiiDAlab team
author_email = aiidalab@materialscloud.org
description = Demo app for AiiDAlab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-hello-world
project_urls =
    Bug Tracker = https://github.com/aiidalab/aiidalab-hello-world/issues
    Documentation = https://github.com/aiidalab/aiidalab-hello-world#readme
    Logo = https://github.com/aiidalab/aiidalab-hello-world/raw/master/img/logo.png
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiidalab-widgets-base~=1.0.0

[flake8]
# Adapted from: https://github.com/CasperWA/voila-optimade-client
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.
