[metadata]
name = aiidalab_hello_world
version = 1.0.0
description = Demo app for AiiDAlab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-hello-world
author = The AiiDAlab team
author_email = aiidalab@materialscloud.org
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker = https://github.com/aiidalab/aiidalab-hello-world/issues
    Documentation = https://github.com/aiidalab/aiidalab-hello-world#readme
    Logo = https://github.com/aiidalab/aiidalab-hello-world/raw/master/img/logo.png

[options]
packages = find:
install_requires =
    aiidalab-widgets-base~=1.0.0
python_requires = >=3.8

[aiidalab]
title = AiiDAlab Hello World App

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.
